<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/login_backgroud">
<LinearLayout android:layout_centerInParent="true"
    android:layout_height="400dp"
    android:layout_width="500dp"
    android:background="@drawable/login_bg_p"
    android:padding="30dp"
    android:orientation="vertical">
    <ImageView android:src="@drawable/login_title"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"/>
        <TableLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:layout_gravity="center"
           >
           <TableRow >
                <TextView android:text="@string/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:id="@+id/login_tn"/>
                <EditText android:id="@+id/userName"
                    android:layout_width="180px"
                    android:layout_height="40px"  android:text="0216578"
                	android:textColor="@color/black"
                    />
           </TableRow>
           <TableRow>
                <TextView android:text="@string/user_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_pn"
                    android:textColor="@color/black"
                   />
                <EditText android:id="@+id/userPassword"
                    android:layout_width="180px"
                    android:layout_height="40px"
                    android:password="true" android:text="123456"
                    android:textColor="@color/black"
                    />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/address_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_pn_ip"
                    android:textColor="@color/black"
                   />
                <EditText android:id="@+id/userip"
                    android:layout_width="180px"  android:text="192.168.1.145"
                    android:layout_height="40px"
                    android:textColor="@color/black"
                    />
            </TableRow>
        </TableLayout>
        <Button 
            android:background="@drawable/login_btn"
            android:id="@+id/loginSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20px"/>
    </LinearLayout>
    
</RelativeLayout>